--- a/data/en/bio.yml
+++ b/data/en/bio.yml
@@ -5,18 +5,18 @@ image : images/team/1FaceMasa.jpg
 squareImage : images/team/bio_square.jpg
 liveImage : images/team/201808_live.jpg
 paintingImage : images/team/201807_painting.jpg
-name : Masa (Representative of Border-free Music)
-designation : Neo City Pop singer-songwriter/guitarist
+name : Sora Satoh (Representative of Border-free Music)
+designation : Neo CityPop singer-songwriter/guitarist
 longDescription : |-
- Masa is a Japanese singer-songwriter & guitarist creating Neo City Pop by blending modern music elements into 70s/80s City Pop. He has spent more than half of his lifetime outside Japan and has been working internationally, not only playing festivals and concerts over 10 countries and 30 cities, but also running a cross-cultural music community called Neo Tokyo (https://discord.gg/QyEQBY6)
+ Sora Satoh is a Japanese singer-songwriter & guitarist creating Neo CityPop by blending modern music elements into 70s/80s CityPop. He has spent more than half of his lifetime outside Japan and has been working internationally, not only playing festivals and concerts over 10 countries and 30 cities, but also running a cross-cultural music community called Neo Tokyo (https://discord.gg/QyEQBY6)
 
- The theme of Masa’s songs are based on unique Japanese vocabulary and philosophy. He creates modern City Pop sounds with smoky vocals, funk/neo-soul groove, tasty blues guitar, and laid back jazz harmony. His music style emanates the sounds of blues, soul, and jazz and combines them with catchy melodies.
+ The theme of Sora’s songs are based on unique Japanese vocabulary and philosophy. He creates modern City Pop sounds with smoky vocals, funk/neo-soul groove, tasty blues guitar, and laid back jazz harmony. His music style emanates the sounds of blues, soul, and jazz and combines them with catchy melodies.
 
- Masa grew up listening to City Pop and The Beatles. When he moved to the UK to study music, he got into afro-american music such as blues, jazz, funk, neo-soul etc. After graduation, he started traveling the world with his guitar. He started out busking in Galway, Ireland, and has built a reputation one performance at a time. Highlights of his journey have been recording guitar for a German TV advertisement and playing music festivals in Europe (with ex-Weather Girls Ingrid Arthur and others).
+ Sora grew up listening to CityPop and The Beatles. When he moved to the UK to study music, he got into afro-american music such as blues, jazz, funk, neo-soul etc. After graduation, he started traveling the world with his guitar. He started out busking in Galway, Ireland, and has built a reputation one performance at a time. Highlights of his journey have been recording guitar for a German TV advertisement and playing music festivals in Europe (with ex-Weather Girls Ingrid Arthur and others).
 
- For inquiries about performances, collaborations, commission works etc, please contact me: masa.citypop@gmail.com
+ For inquiries about performances, collaborations, commission works etc, please contact me: iamsorasatoh@gmail.com
 shortDescription : |-
-  Masa is a Japanese singer-songwriter & guitarist creating Neo City Pop by blending modern music elements into 70s/80s City Pop. The theme of Masa’s songs are based on unique Japanese vocabulary and philosophy.
+  Sora Satoh is a Japanese singer-songwriter & guitarist creating Neo CityPop by blending modern music elements into 70s/80s CityPop. The theme of Sora’s songs are based on unique Japanese vocabulary and philosophy.
 btnContent: Read more
 activitiesTitle : Recent activities
 achievementYoutube : https://www.youtube.com/embed/Np1laykdctc
@@ -35,6 +35,6 @@ achievements :
     emphasis : true
 profileTitle : About me
 profile :
-  - "Favourite genre: Black music (blues/jazz/neo-soul etc), city pop, folk etc"
-  - "Favourite musicians: The Beatles, John Mayer, D'Angelo, Junko Ohashi, Tatsuro Yamashita etc"
+  - "Favourite genre: CityPop, African American music (blues/jazz/neo-soul etc), folk"
+  - "Favourite musicians: Tatsuro Yamashita, KIRINJI, The Beatles, John Mayer, D'Angelo etc"
   - "Hobbies: Painting, museums, nature"
