--- a/data/ja/bio.yml
+++ b/data/ja/bio.yml
@@ -5,7 +5,7 @@ image : images/team/1FaceMasa.jpg
 squareImage : images/team/bio_square.jpg
 liveImage : images/team/201808_live.jpg
 paintingImage : images/team/201807_painting.jpg
-name : Sora Satoh (Border-free Creatioins 代表)
+name : Sora Satoh (Border-free Creations 代表)
 designation : ネオシティポップ系シンガーソングライター・ギタリスト
 longDescription : |-
   70、80年代のシティポップにモダンな要素を取り入れたネオシティポップのアーティスト。人生の半分以上を海外で過ごしていた経験から、日本と海外の架け橋となるようなミュージシャンを目指し、国内外での音楽活動だけでなく、音楽を通して異文化交流するコミュニティー【ネオ東京(https://discord.gg/QyEQBY6)】を設立・運営中（2022年5月現在1500人）。
