--- a/data/en/bio.yml
+++ b/data/en/bio.yml
@@ -14,7 +14,7 @@ longDescription : |-
 
  Sora grew up listening to CityPop and The Beatles. When he moved to the UK to study music, he got into afro-american music such as blues, jazz, funk, neo-soul etc. After graduation, he started traveling the world with his guitar. He started out busking in Galway, Ireland, and has built a reputation one performance at a time. Highlights of his journey have been recording guitar for a German TV advertisement and playing music festivals in Europe (with ex-Weather Girls Ingrid Arthur and others).
 
- For inquiries about performances, collaborations, commission works etc, please contact me: iamsorasatoh@gmail.com
+ For inquiries about performances, music commissions (songwriting/composing/arranging/recording/poducing), YouTube collaborations etc, please contact me: contact@sorasatoh.art
 shortDescription : |-
   Sora Satoh is a Japanese singer-songwriter & guitarist creating Neo CityPop by blending modern music elements into 70s/80s CityPop. The theme of Sora’s songs are based on unique Japanese vocabulary and philosophy.
 btnContent: Read more
