--- a/data/ja/bio.yml
+++ b/data/ja/bio.yml
@@ -17,7 +17,7 @@ longDescription : |-
   [略歴]
   幼少期よりビートルズやシティポップを聴いて育ち、ロンドンに音楽留学した際にブルースやジャズなどブラックミュージックに傾倒するようになる。また英語という言語特有のリズム感やメロディー乗りの良さ、そして世界中のリスナーへ届けられるという英語の魅力に惹かれ、英語で作詞作曲を始める。卒業後、単身でアイルランドへ渡航。バスキング（路上演奏）のみで生活費を稼ぎながら、次第に現地のバー、レストラン等で演奏の仕事を貰うようになる。その後、10ヶ国30都市をバスキング（3年間で計1000回以上）で渡り歩く。各地で出会ったミュージシャンからオファーを受け、フェスティバルやTVCMでも演奏。
 
-  演奏・出演、音楽制作（作詞・作曲・編曲・レコーディング・プロデュース）、YouTubeコラボ、その他お問い合わせは contact@sorasatoh.art へご連絡ください。
+  演奏・出演、音楽制作（作詞・作曲・編曲・レコーディング・プロデュース）、YouTubeコラボ、その他お問い合わせは iamsorasatoh@gmail.com へご連絡ください。
 
 shortDescription : |-
   日本語にしかない言葉や日本人らしい物事の捉え方をテーマに英語で歌うシンガーソングライター。日本と海外の架け橋となるようなミュージシャンを目指し音楽活動中。
